more mobile fixes for dumb scrollX overflow

--- a/Assets/styles/home.css
+++ b/Assets/styles/home.css
@@ -11,7 +11,7 @@ body {
 
 .container {
 	width: 90%;
-	overflow: scroll;
+	overflow: hidden scroll;
 	scrollbar-width: none;
 	padding: 20px;
 	margin: 2.5em auto auto;
